--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <h1><%= kindofDay %> </h1>
-
-    <ul>
-        <% for (let i = 0; i < newListItem.length; i++) {%> 
-        <li><%= newListItem[i] %></li>
-        <% } %> 
-    </ul>
-
-    <form action="/" method="post">
-        <input type="text" name="newItem">
-        <button type="submit" name="button">Add</button>
-    </form>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="box" id="heading">
+      <h1><%= listTitle %></h1>
+    </div>
+    <div class="box">
+      <% for (let i = 0; i < newListItem.length; i++) {%>
+      <div class="item">
+        <input type="checkbox" />
+        <p><%= newListItem[i] %></p>
+      </div>
+      <% } %>
+      <form class="item" action="/" method="post">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off"/>
+        <button class="button" type="submit" name="list" value=<%= listTitle %> >+</button>
+      </form>
+    </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
